--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link href="/build/tailwind.css" rel="stylesheet">
+		<link rel="stylesheet" href="/app.css" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
